Header & Footer created

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,1 +1,35 @@
-// Mixins
+@mixin horizontal-align($left: 50%, $translateX: 50%) {
+  position: absolute;
+  left: $left;
+  -webkit-transform: translateX(-$translateX);
+  -moz-transform: translateX(-$translateX);
+  -ms-transform: translateX(-$translateX);
+  -o-transform: translateX(-$translateX);
+  transform: translateX(-$translateX);
+}
+
+@mixin vertical-align($top: 50%, $translateY: 50%) {
+  position: absolute;
+  top: $top;
+  -webkit-transform: translateY(-$translateY);
+  -moz-transform: translateY(-$translateY);
+  -ms-transform: translateY(-$translateY);
+  -o-transform: translateY(-$translateY);
+  transform: translateY(-$translateY);
+}
+
+@mixin vertical-horizontal-align($top: 50%, $translateY: 50%, $left: 50%, $translateX: 50%) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+@mixin spin-animation($speed: 2s, $direction: clockwise-spin) {
+  -webkit-animation: $direction $speed linear infinite;
+  animation: $direction $speed linear infinite;
+}
