--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,1 +1,11 @@
 // Variables
+$font-family-sans-serif: 'SF Compact Display', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$blue: #0057FC;
+$blue-300: #E6F4FF;
+$blue-400: #CDEAFF;
+
+$gray-200: #F2F4FD;
+$gray-300: #E3E5EA;
+$gray-400: #848CA1;
+$gray-500: #5E5E5E;
+$gray-900: #25252F;
