--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -1,1 +1,9 @@
 // General Style
+.container, .container-fluid {
+  padding-left: $container-padding-x;
+  padding-right: $container-padding-x;
+}
+
+.container {
+  max-width: 1100px;
+}
