--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,1 +1,159 @@
-// Layout Style
+// General layout
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  & > main {
+    flex-grow: 1;
+  }
+  & > footer {
+    margin-top: auto;
+  }
+}
+
+// Navbar
+.navbar {
+  border-bottom: 1px solid $gray-300;
+  background: $white;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10);
+  padding-top: 7.5px;
+  padding-bottom: 7.5px;
+  .nav {
+    & > .nav-item {
+      font-size: rem-calc(18);
+      font-weight: 500;
+      .dropdown-menu {
+        border-radius: 10px;
+        border: 1px solid $blue-400;
+        background: $white;
+        box-shadow: 0px 2px 16px 1px rgba(0, 0, 0, 0.07);
+        .dropdown-item {
+          font-size: rem-calc(18);
+          font-weight: 500; 
+          padding: 11px 15px;
+          color: $gray-900;
+          transition: $transition-base;
+          &:hover, &:focus {
+            background-color: $blue-300;
+          }
+          &:active {
+            background-color: $blue-400;
+          }
+        }
+      }
+    }
+    .nav-link {
+      color: $black;
+      display: flex;
+      align-items: center;
+      &.show {
+        color: $gray-500;
+      }
+      &:hover, &:focus {
+        color: $gray-500;
+      }
+      &.dropdown-toggle {
+        &:after {
+          content: none;
+        }
+      }
+    }
+  }
+  .socials-list {
+    min-width: 146px;
+    a {
+      transition: $transition-base;
+      opacity: 1;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+  .mobile-navbar-toggler {
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+}
+
+// Footer
+.footer {
+  background: $gray-200;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  @include media-breakpoint-down(md) { 
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  & > .container {
+    gap: 60px;
+    @include media-breakpoint-down(md) {
+      gap: 30px;
+    }
+  }
+  .socials-list {
+    a {
+      transition: $transition-base;
+      opacity: 1;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+  .copyright {
+    font-size: rem-calc(12);
+    font-weight: 500;
+    color: $gray-400;
+  }
+}
+
+.footer-nav {
+  gap: 20px;
+  font-size: rem-calc(16);
+  font-weight: 500;
+  @include media-breakpoint-down(md) { 
+    font-size: rem-calc(18);
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+    &:last-child {
+      margin-top: 20px;
+      font-size: rem-calc(16);
+    }
+  }
+  h6 {
+    @include media-breakpoint-down(md) {
+      font-size: rem-calc(18);
+    }
+  }
+  li {
+    a {
+      text-decoration: none;
+      color: $gray-900;
+      transition: $transition-base;
+      &:hover, &:focus {
+        color: $primary;
+      }
+    }
+  }
+}
+
+.legal-menu {
+  gap: 70px;
+  @include media-breakpoint-down(md) {
+    gap: 20px;
+  }
+  li {
+    font-size: rem-calc(12);
+    font-weight: 500;
+    a {
+      text-decoration: none;
+      color: $gray-900;
+      transition: $transition-base;
+      &:hover, &:focus {
+        color: $primary;
+      }
+    }
+  }
+}
