--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -3,9 +3,15 @@
 $blue: #0057FC;
 $blue-300: #E6F4FF;
 $blue-400: #CDEAFF;
+$blue-600: #0948BF;
+$blue-700: #043DAA;
 
+$gray-100: #F0F2F5;
 $gray-200: #F2F4FD;
 $gray-300: #E3E5EA;
 $gray-400: #848CA1;
 $gray-500: #5E5E5E;
 $gray-900: #25252F;
+
+$btn-border-width: 2px;
+$btn-font-weight: 500;
