--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -7,3 +7,15 @@
 .container {
   max-width: 1100px;
 }
+
+// Buttons
+.btn {
+  &.primary {
+    &:hover, &:focus {
+      background-color: $blue-600;
+    }
+    &:active {
+      background-color: $blue-700;
+    }
+  }
+}
