--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -9,9 +9,14 @@ $blue-700: #043DAA;
 $gray-100: #F0F2F5;
 $gray-200: #F2F4FD;
 $gray-300: #E3E5EA;
+$gray-350: #F8F9FC;
 $gray-400: #848CA1;
 $gray-500: #5E5E5E;
 $gray-900: #25252F;
 
 $btn-border-width: 2px;
 $btn-font-weight: 500;
+
+$btn-padding-y-lg: 22px;
+$btn-padding-x-lg: 72px;
+$btn-font-size-lg: rem-calc(20);
