--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,3 +1,28 @@
+@mixin gradientAnimation( $deg, $start, $end, $transTime: 0.2s ) {
+  background-size: 100%;
+  background-image: linear-gradient($deg, $start, $end);
+  position: relative;
+  z-index: 1;
+  &:before {
+    background-image: linear-gradient($deg, $end, $start);
+    content: "";
+    display: block;
+    height: 100%;
+    position: absolute;
+    top: 0; 
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    z-index: -1;
+    transition: opacity $transTime;
+  }
+  &:hover, &:focus {
+    &:before {
+      opacity: 1;
+    }
+  }
+}
+
 @mixin horizontal-align($left: 50%, $translateX: 50%) {
   position: absolute;
   left: $left;
