--- a/assets/scss/_module.scss
+++ b/assets/scss/_module.scss
@@ -57,3 +57,129 @@
     }
   }
 }
+
+// Specialists slider
+.specialists-slider {
+  margin-left: -1.5rem!important;
+  padding: 0 1.5rem!important;
+  width: calc(100% + 3rem);
+  &.-non-slider .swiper-wrapper {
+    transform: inherit!important;   
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    @include media-breakpoint-down(md) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  &.-non-slider .swiper-slide {
+      width: inherit!important;
+  }
+  &.-non-slider .swiper-slide-duplicate {
+      display: none;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 48px;
+    height: 48px;
+    background: $white;
+    box-shadow: 0px 2.629px 29.703px 0px rgba(22, 41, 88, 0.08);
+    border: 2px solid $gray-600;
+    border-radius: 50%;
+    transition: $transition-base;
+    &:after {
+      content: none;
+    }
+    &:hover {
+      border-color: #49A7EC;
+      svg {
+        path {
+          strike: $gray-900;
+        }
+      }
+    }
+    svg {
+      width: auto;
+      height: auto;
+      path {
+        transition: $transition-base;
+        stroke: $gray-600;
+      }
+    }
+  }
+  .swiper-button-prev {
+    left: 0;
+  }
+  .swiper-button-next {
+    right: 0;
+  }
+}
+
+// Specialist card
+.specialist-card {
+  //max-width: 387px;
+  gap: 15px;
+  padding: 24px;
+  border-color: $gray-300;
+  border-radius: 10px;
+  overflow: visible;
+  margin-top: 28px;
+  transition: $transition-base;
+  &:hover {
+    box-shadow: 0px 2px 22.6px 0px rgba(22, 41, 88, 0.16);
+  }
+  .card-img {
+    width: 150px;
+    height: 150px;
+    background: $gray-400;
+    border: 8px solid $gray-400;
+    margin-top: -52px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .card-meta {
+    gap: 5px;
+    li {
+      color: $gray-400;
+      font-size: rem-calc(12);
+      &:not(:last-child) {
+        &:after {
+          content: '·';
+          margin-left: 5px;
+        }
+      }
+    }
+  }
+  .card-price {
+    .price-value {
+      font-size: rem-calc(16);
+    }
+    .price-label {
+      color: $gray-600;
+      font-size: rem-calc(14);
+    }
+  }
+  .card-services {
+    .service-label {
+      font-size: rem-calc(14);
+    }
+  }
+  .service-list {
+    li {
+      font-size: rem-calc(12);
+      background: linear-gradient(90deg, #5C8DE1 -7.47%, #35B0D0 85.26%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      padding: 3px 10px;
+      border: 1px solid $gray-200;
+      transition: $transition-base;
+      &:hover {
+        background-color: $gray-200;
+      }
+    }
+  }
+}
