--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -6,10 +6,18 @@
 
 .container {
   max-width: 1100px;
+  @include media-breakpoint-up(md) {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
 
 .container-fluid {
   max-width: 1656px;
+  @include media-breakpoint-up(md) {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
 
 // Buttons
