Content section completed

--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -13,7 +13,10 @@ $gray-350: #F8F9FC;
 $gray-400: #848CA1;
 $gray-500: #5E5E5E;
 $gray-600: #9AA2B2;
+$gray-700: #555;
 $gray-900: #25252F;
+
+$light: $gray-350;
 
 $purple: #9D5AF1;
 $teal: #49ECC5;
