--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -5,7 +5,7 @@
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1172px;
   @include media-breakpoint-up(md) {
     padding-left: 3rem;
     padding-right: 3rem;
@@ -53,7 +53,7 @@
 }
 
 h2, .h2 {
-  @include media-breakpoint-down(md) { 
+  @include media-breakpoint-down(lg) { 
     font-size: rem-calc(35);
   }
 }
