Content sections created

--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -30,5 +30,6 @@ $btn-padding-y-lg: 18px;
 $btn-padding-x-lg: 72px;
 $btn-font-size-lg: rem-calc(20);
 
+$h1-font-size: rem-calc(60);
 $h2-font-size: rem-calc(45);
 $headings-font-weight: 600; 
