--- a/assets/scss/_module.scss
+++ b/assets/scss/_module.scss
@@ -58,31 +58,12 @@
   }
 }
 
-// Specialists slider
+// Sliders
 .specialists-slider, 
 .posts-slider {
   margin-left: -1.5rem!important;
   padding: 0 1.5rem!important;
   width: calc(100% + 3rem);
-  &.-non-slider .swiper-wrapper {
-    transform: inherit!important;   
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 24px;
-    @include media-breakpoint-down(sm) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-  }
-  &.-non-slider .swiper-slide {
-      width: inherit!important;
-      &:nth-child(5),
-      &:nth-child(6) {
-        display: none;
-      }
-  }
-  &.-non-slider .swiper-slide-duplicate {
-      display: none;
-  }
 }
 
 // Swiper buttons
@@ -222,6 +203,51 @@
     }
     p {
       @include line-clamp(5);
+    }
+  }
+}
+
+// FAQ accordion
+.faq-list {
+  gap: 20px;
+  @include media-breakpoint-down(md) { 
+    gap: 10px;
+  }
+  .accordion-item {
+    border: none;
+  }
+  .accordion-header {
+    .accordion-button {
+      border-radius: 0;
+      background: transparent;
+      padding: 10px 0;
+      box-shadow: none;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+  }
+  .accordion-button {
+    gap: 1rem;
+    &:after {
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      background-color: $primary;
+      background-position: center center;
+      background-image: url('../img/icons/arrow-down.svg');
+      background-repeat: no-repeat;
+      background-size: 14px 14px;
+    }
+  }
+  .accordion-body {
+    color: $gray-700;
+    padding-left: 0;
+    padding-right: 0;
+    & > * {
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
