--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -21,11 +21,18 @@ $light: $gray-350;
 $purple: #9D5AF1;
 $teal: #49ECC5;
 
+$input-btn-padding-y: 0.75rem;
+$input-btn-padding-x: 1rem;
+
+$btn-font-size: rem-calc(18);
 $btn-border-width: 2px;
 $btn-font-weight: 500;
+$btn-padding-y: 0.5rem;
+
 $btn-font-size-sm: rem-calc(12);
 $btn-padding-y-sm: 9px;
 $btn-padding-x-sm: 12px;
+
 $btn-padding-y-lg: 18px;
 $btn-padding-x-lg: 72px;
 $btn-font-size-lg: rem-calc(20);
@@ -33,3 +40,10 @@ $btn-font-size-lg: rem-calc(20);
 $h1-font-size: rem-calc(60);
 $h2-font-size: rem-calc(45);
 $headings-font-weight: 600; 
+
+$modal-md: 442px;
+$modal-backdrop-bg: #37363A;
+$modal-backdrop-opacity: 0.33;
+
+$form-label-margin-bottom: 5px;
+$form-label-font-size: rem-calc(14);
