--- a/assets/scss/_module.scss
+++ b/assets/scss/_module.scss
@@ -251,3 +251,53 @@
     }
   }
 }
+
+//  Modals
+.modal {
+  .modal-md {
+    .modal-content {
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0px 2px 22.6px 0px rgba(22, 41, 88, 0.16);
+      border-color: transparent;
+      gap: 25px;
+      @include media-breakpoint-down(sm) { 
+        padding: 40px 1rem 1rem 1rem;
+      }
+      h3 {
+        font-size: rem-calc(30);
+        font-weight: 600;
+        @include media-breakpoint-down(sm) { 
+          font-size: rem-calc(26);
+        }
+      }
+      .alert {
+        font-size: rem-calc(15);
+        font-weight: 500;
+        line-height: 1.33;
+        padding: 10px 24px;
+        background-color: #CDEAFF;
+        border-radius: 5px;
+      }
+      .form-control {
+        border-radius: 25px;
+      }
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        transition: $transition-base;
+        cursor: pointer;
+        display: flex;
+        &:hover {
+          transform: rotate(180deg);
+          svg {
+            path {
+              stroke: $primary;
+            }
+          }
+        }
+      }
+    }
+  }
+}
