Specialists page completed

--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -47,3 +47,8 @@ $modal-backdrop-opacity: 0.33;
 
 $form-label-margin-bottom: 5px;
 $form-label-font-size: rem-calc(14);
+
+$nav-link-color: #AAB3C3;
+$nav-link-font-size: 1rem;
+$nav-link-font-weight: 500;
+$nav-pills-link-active-bg: #49A7EC;
