--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -142,8 +142,8 @@ body {
   padding-top: 80px;
   padding-bottom: 80px;
   @include media-breakpoint-down(md) { 
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
   & > .container-fluid {
     gap: 40px;
@@ -274,19 +274,17 @@ body {
       font-size: rem-calc(16);
     }
   }
-  h6 {
+  h6, .h6 {
     @include media-breakpoint-down(md) {
       font-size: rem-calc(18);
     }
   }
-  li {
-    a {
-      text-decoration: none;
-      color: $gray-900;
-      transition: $transition-base;
-      &:hover, &:focus {
-        color: $primary;
-      }
+  a {
+    text-decoration: none;
+    color: $gray-900;
+    transition: $transition-base;
+    &:hover, &:focus {
+      color: $primary;
     }
   }
 }
