--- a/assets/scss/_module.scss
+++ b/assets/scss/_module.scss
@@ -54,6 +54,9 @@
       &:hover, &:focus {
         color: $primary;
       }
+      &.active {
+        color: $primary;
+      }
     }
   }
 }
@@ -117,6 +120,14 @@
   background-color: $white;
   &:hover {
     box-shadow: 0px 2px 22.6px 0px rgba(22, 41, 88, 0.16);
+  }
+  .card-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
   }
   .card-img {
     width: 150px;
