--- a/assets/scss/_bootstrap_variable_overrides.scss
+++ b/assets/scss/_bootstrap_variable_overrides.scss
@@ -52,3 +52,9 @@ $nav-link-color: #AAB3C3;
 $nav-link-font-size: 1rem;
 $nav-link-font-weight: 500;
 $nav-pills-link-active-bg: #49A7EC;
+
+$breadcrumb-font-size: rem-calc(18);
+$breadcrumb-margin-bottom: 0;
+$breadcrumb-active-color: $gray-900;
+$breadcrumb-divider-color: $gray-400;
+$breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='15' viewBox='0 0 8 15' fill='none' %3E%3Cpath d='M1.0835 1.66634L6.91683 7.49967L1.0835 13.333' stroke='#848CA2' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
