--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -46,10 +46,22 @@
       border-color: $primary;
       background-color: $primary;
       color: $white;
+      .gradient-text {
+        background: none;
+        background-clip: unset;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+      }
     }
     &:active {
       background-color: $blue-700;
       border-color: $blue-700;
+      .gradient-text {
+        background: none;
+        background-clip: unset;
+        -webkit-background-clip: unset;
+        -webkit-text-fill-color: unset;
+      }
     }
   }
 
@@ -84,4 +96,18 @@ h2, .h2 {
 
 .border-teal {
   border-color: $teal !important;
+}
+
+.gradient-text {
+  background: linear-gradient(87deg, #6196EC -4.41%, #34BADD 59.04%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.embed-video {
+  background: $gray-200;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
 }
