--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -49,6 +49,22 @@ body {
       &.show {
         color: $gray-500;
       }
+      &.active {
+        background: linear-gradient(87deg, #6196EC -4.41%, #34BADD 59.04%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        cursor: default;
+        &:before {
+          content: '';
+          height: 2px;
+          position: absolute;
+          bottom: -10px;
+          left: 0;
+          right: 0;
+          background: linear-gradient(87deg, #6196EC -4.41%, #34BADD 59.04%);
+        }
+      }
       &:hover, &:focus {
         color: $gray-500;
       }
@@ -224,6 +240,119 @@ body {
     & + p {
       color: #A6A6A6;
       font-size: rem-calc(18);
+    }
+  }
+}
+
+// Single specialist
+.single-specialist {
+  padding-top: 40px;
+  padding-bottom: 80px;
+  & > .container {
+    gap: 40px;
+  }
+}
+
+.specialist-sidebar {
+  width: 387px;
+  padding: 20px;
+  border-radius: 20px;
+  border: 1px solid $gray-300;
+  gap: 20px;
+  .card-img {
+    width: 150px;
+    height: 150px;
+    background: $gray-400;
+    border: 8px solid $gray-400;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .card-name {
+    font-size: rem-calc(30);    
+  }
+  .card-contact {
+    font-size: rem-calc(18);    
+    color: $gray-400;
+  }
+  .card-title {    
+    font-size: rem-calc(22);
+    font-weight: 5
+  }
+  .card-experience {
+    font-size: rem-calc(18);    
+    color: $gray-400;
+  }
+  .card-price {
+    .price-value {
+      font-size: rem-calc(16);
+    }
+    .price-label {
+      color: $gray-600;
+      font-size: rem-calc(14);
+    }
+  }
+  .btn {
+    font-size: rem-calc(16);
+  }
+  .card-meta {
+    gap: 15px;
+    li {
+      gap: 8px;
+      .meta-label {
+        color: $gray-600;
+        font-size: rem-calc(14);
+      }
+      .meta-value {
+
+      }
+    }
+  }
+  .card-document {
+    height: 108px;
+    border-radius: 10px;
+    overflow: hidden;
+    &:hover {
+      .doc-icon {
+        border-color: $white;
+        background-color: $primary;
+        svg path {
+          stroke: $white;
+        }
+      }
+    }
+    .doc-icon {
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: $white;
+      border: 1px solid $blue-400;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @include vertical-horizontal-align();
+      z-index: 1;
+      transition: $transition-base;
+      svg path {
+        transition: $transition-base;
+      }
+    }
+  }
+}
+
+.specialist-main {
+  flex: 1 1 0;
+  gap: 40px;
+  h3 {
+    font-size: rem-calc(24);
+    font-weight: 500;
+  }
+  .content {
+    color: $gray-400;
+    & > *:last-child {
+      margin-bottom: 0;
     }
   }
 }
