--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -265,8 +265,15 @@ body {
 .single-specialist {
   padding-top: 40px;
   padding-bottom: 80px;
+  @include media-breakpoint-down(lg) { 
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
   & > .container {
     gap: 40px;
+    @include media-breakpoint-down(lg) { 
+      gap: 30px;
+    }
   }
 }
 
@@ -276,6 +283,9 @@ body {
   border-radius: 20px;
   border: 1px solid $gray-300;
   gap: 20px;
+  @include media-breakpoint-down(lg) { 
+    width: 100%;
+  }
   .card-img {
     width: 150px;
     height: 150px;
@@ -365,6 +375,9 @@ body {
   h3 {
     font-size: rem-calc(24);
     font-weight: 500;
+    @include media-breakpoint-down(lg) {
+      font-size: rem-calc(18);
+    }
   }
   .content {
     color: $gray-400;
@@ -372,8 +385,109 @@ body {
       margin-bottom: 0;
     }
   }
+  .info-nav {
+    @include media-breakpoint-down(lg) { 
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      white-space: nowrap;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+  .card-img {
+    width: 80px;
+    height: 80px;
+    background: $gray-400;
+    border: 4px solid $gray-400;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .card-name {
+    font-size: rem-calc(20);    
+  }
+  .card-contact {
+    font-size: rem-calc(16);    
+    color: $gray-400;
+  }
+  .card-price {
+    .price-value {
+      font-size: rem-calc(16);
+    }
+    .price-label {
+      color: $gray-600;
+      font-size: rem-calc(14);
+    }
+  }
+  .profile-card {
+    border-radius: 20px;
+    border: 1px solid $gray-200;
+    background: $white;
+    padding: 1rem;
+    font-size: rem-calc(14);
+    color: $gray-400;
+    &:after {
+      content: '';
+      width: 18px;
+      height: 18px;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background: url('../img/icons/arrow-right.svg') no-repeat center center;
+    }
+    .profile-title {
+      font-size: rem-calc(16);
+      color: $gray-900;
+    }
+  }
+  .card-meta {
+    gap: 15px;
+    li {
+      gap: 8px;
+      .meta-label {
+        color: $gray-600;
+        font-size: rem-calc(14);
+      }
+    }
+  }
+  .card-document {
+    height: 108px;
+    border-radius: 10px;
+    overflow: hidden;
+    &:hover {
+      .doc-icon {
+        border-color: $white;
+        background-color: $primary;
+        svg path {
+          stroke: $white;
+        }
+      }
+    }
+    .doc-icon {
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: $white;
+      border: 1px solid $blue-400;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      @include vertical-horizontal-align();
+      z-index: 1;
+      transition: $transition-base;
+      svg path {
+        transition: $transition-base;
+      }
+    }
+  }
   .meta-section {
     gap: 30px;
+    @include media-breakpoint-down(lg) {
+      gap: 20px;
+    }
   }
   .service-list {
     li {
